<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rango</string>
    <string name="hello_world">Hola Mundo</string>
    <string name="test">Prueba</string>
    <string name="menu_settings">Settings</string>
    <string name="tab_friends_list">Amigos</string>
    <string name="no_friends_on_list">Invita a tus amigos</string>
    <string name="tab_calls_list">Reciente</string>
    <string name="content_two">Contenido dos</string>
    <string name="tab_user_profile">Perfil</string>
    <string name="image">Thumbnail</string>
    <string name="get_started">Habla por radio con tus amigos.</string>
    <string name="welcome">Bienvenido, has iniciado sesión.</string>
    <string name="app_id">138858016269838</string>
    <string name="settings">Configuración</string>
    <string name="logout_text">Logout</string>
	
	<!-- MENU -->
	<string name="menu_invite_friends">Invitar</string>
	<string name="menu_notifications">Avisos</string>
	
	<string name="fb_invite_friends_message">Habla por radio con tus amigos</string>
	<string name="invite_friends_btn">Invita amigos</string>
	<string name="holdToTalk">Mantener presionado para hablar</string>
	<string name="calling">Llamando&#8230;</string>
	<string name="confirm_friend_request">Confirmar</string>
	<string name="decline_friend_request">Ahora no</string>
	<string name="no_friend_requests">No tienes solicitudes de amistad</string>
	<string name="no_calls_log">No tienes llamadas recientes</string>
	<string name="empty_friends_list">Comparte con tus amigos</string>
	<string name="requests_list_title">Solicitudes de Amistad</string>
	
	<!-- WalkieTalkie -->
	<string name="callEnded">Llamada terminada</string>
	
	<!-- Incoming Call -->
	<string name="incomingCall">Llamada entrante</string>
	<string name="answer">Contestar</string>
	<string name="reject">Rechazar</string>
</resources>