<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:orientation="horizontal"
              android:layout_alignParentLeft="true" >

    <com.facebook.widget.ProfilePictureView
            android:id="@+id/icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/image" />
    <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp" >
        <TextView
                android:id="@+id/text1"
                android:text="@string/test"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        
        <LinearLayout
            	android:orientation="horizontal"
            	android:layout_gravity="bottom"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content" >
            <Button 
	            android:id="@+id/confirm_friend_request"
	            android:text="@string/confirm_friend_request"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
            
            <Button 
	            android:id="@+id/decline_friend_request"
	            android:text="@string/decline_friend_request"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
        </LinearLayout>
       
    </LinearLayout>

</LinearLayout>