<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_grey" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/incomingCall"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"/>
    
    <com.facebook.widget.ProfilePictureView
		android:id="@+id/contact_profile_pic"
		android:layout_height="130dp"
		android:layout_width="130dp"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="30dp"
		android:background="@drawable/profile_image_bg"
		facebook:preset_size="normal"/>
    
    <TextView 
        android:id="@+id/contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="26sp"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:gravity="center">
        
        <Button 
            style="@style/ShadowText"
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:textColor="@color/white"
            android:background="@drawable/answer_button"/>
        
        <Button 
            style="@style/ShadowText"
            android:id="@+id/reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/reject"
            android:textColor="@color/white"
            android:background="@drawable/reject_button"/>
        
    </LinearLayout>

</LinearLayout>
