<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal" >

		    <com.facebook.widget.ProfilePictureView
		            android:id="@+id/chat_friend_icon"
		            android:layout_width="60dp"
		            android:layout_height="60dp"
		            android:contentDescription="@string/image"
		            android:layout_marginLeft="10dp" />
		    <LinearLayout
		            android:orientation="vertical"
		            android:layout_gravity="center_vertical"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="15dp" >
	
		        <TextView
		            android:id="@+id/chat_friend_name"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/test"
		            android:textColor="@color/white"
		            android:textSize="24sp" />
	
		        <TextView
		            android:id="@+id/chat_friend_desc"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/test"
		            android:textColor="#6699CC"
		            android:textSize="18sp" />
	
		    </LinearLayout>
	   	</LinearLayout>

	    <RelativeLayout android:padding="12dp"
	        android:id="@+id/mainlayout"
	        android:orientation="vertical"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent">
	
	        <ToggleButton
	            android:layout_height="250dp"
	            android:layout_width="250dp"
	            android:text="@string/holdToTalk"
	            android:id="@+id/pushToTalk"
	
	            android:layout_centerHorizontal="true"
	            android:layout_centerVertical="true"
	            android:textOff="@string/holdToTalk"
	            android:textOn="@string/holdToTalk"
	            android:layout_marginTop="-20dp" />
	
	    </RelativeLayout>
	    
</LinearLayout>